# Lone-Ranger

./: CMakeLists.txt  LICENSE  README.md
coord/: CMakeLists.txt
coord/include/: altitude.hpp  coord_types.hpp  dms.hpp  lla.hpp  transforms.distance.hpp  transforms.earth.hpp
coord/src/: transforms.earth.cpp
nmea/: CMakeLists.txt
nmea/include/: nmea.format.gga.hpp  nmea.format.gsv.hpp  nmea.format.hpp  nmea.format.rmc.hpp  nmea.parse.hpp
nmea/src/: nmea.parse.cpp
src/: CMakeLists.txt  main.cpp
test/: a.out  main.cpp
